// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.adservices.service.proto;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// Seller's FrontEnd service.
service SellerFrontEnd {
  // Selects a winning ad for the Publisher ad slot that would be
  // rendered on the user's device.
  // TODO(b/237817698): Add rpc timeout
  rpc SelectWinningAd(SelectWinningAdRequest)
      returns (SelectWinningAdResponse) {}
}

// SelectWinningAdRequest is sent from user's device to the
// SellerFrontEnd Service.
message SelectWinningAdRequest {
  // Unencrypted request.
  message SelectWinningAdRawRequest {
    enum ClientType {
      UNKNOWN = 0;

      // An Android device with Google Mobile Services (GMS).
      // Note: This covers apps on Android and browsers on Android.
      ANDROID = 1;

      // An Android device without Google Mobile Services (GMS).
      ANDROID_NON_GMS = 2;

      // Any browser.
      BROWSER = 3;
    }

    // AuctionConfig required by the seller for ad auction.
    // The auction config includes contextual signals and other data required
    // for auction. This also includes the url to fetch seller's proprietary
    // auction logic and real-time signals. This config is passed from client
    // to SellerFrontEnd service in the umbrella request
    // (SelectWinningAdRequest).
    message AuctionConfig {
      // Custom seller inputs for advertising on Android.
      message CustomSellerInputsForAndroid {
        // To be updated later if any custom fields are required to support
        // Android.
      }

      // Custom seller inputs for advertising on web.
      message CustomSellerInputsForBrowser {
        // This timeout can be specified to restrict the runtime (in
        // milliseconds) of the seller's scoreAd() script for auction.
        int64 seller_timeout_ms = 1;

        // Optional. Component auction configuration can contain additional
        // auction configurations for each seller's "component auction".
        google.protobuf.Struct component_auctions = 2;

        // The Id is specified by the seller to support coordinated experiments
        // with the seller's Key/Value services.
        int64 experiment_group_id = 3;
      }

      // Optional. Custom seller inputs.
      oneof CustomSellerInputs {
        CustomSellerInputsForAndroid custom_seller_inputs_android = 1;

        CustomSellerInputsForBrowser custom_seller_inputs_browser = 2;
      }

      // Url for fetching seller owned auction code.
      // For simplicity, this is one url. However, separate endpoints to fetch
      // JS and WASM may be added later.
      string decision_logic_url = 3;

      // Url endpoint for seller Key/Value lookup.
      string scoring_signals_url = 4;

      /*..........................Contextual Signals.........................*/
      // Contextual Signals refer to seller_signals and auction_signals
      // derived contextually.

      // Seller specific signals that include information about the context
      // (e.g. Category blocks Publisher has chosen and so on). This can
      // not be fetched real-time from Key-Value Server.
      // Represents a JSON object.
      google.protobuf.Struct seller_signals = 5;

      // Information about auction (ad format, size).
      // This information is required for both bidding and auction.
      // Represents a JSON object.
      google.protobuf.Struct auction_signals = 6;

      // Signals about device.
      // Required for both bidding and auction.
      oneof DeviceSignals {
        // A JSON object constructed by Android containing contextual
        // information that SDK or app knows about and that adtech's bidding
        // and auction code can ingest.
        google.protobuf.Struct android_signals = 7;

        // A JSON object constructed by the browser, containing information that
        // the browser knows about and that adtech's bidding and auction code
        // can ingest.
        google.protobuf.Struct browser_signals = 8;
      }
    }

    // Ad request timestamp.
    // Note: The precision will be limited to preserve privacy.
    google.protobuf.Timestamp timestamp = 1;

    // Optional. Required by Android to identify an ad selection request. This
    // is going to be cached on the server side to help with reporting.
    // Note: The precision will be limited to preserve privacy.
    int64 ad_selection_request_id = 2;

    // Encrypted BuyerInput per buyer.
    // The key in the map corresponds to buyer Id that can identify a buyer
    // participating in the auction. Buyer Id can be Adtech enrollment Id with
    // Privacy Sandbox or eTLD+1.
    // The value corresponds to BuyerInput ciphertext that will be ingested by
    // the buyer for bidding. BuyerInput include information about Custom
    // Audience (a.k.a Interest Group), certain signals required for bidding
    // and url endpoints to fetch buyer code. The value is encrypted on client
    // device before that is sent server side.
    // The SellerFrontEnd service sends the BuyerInput ciphertext (value in map)
    // to a BuyerFrontEnd service corresponding to buyer Id (key in map). The
    // SellerFrontEnd doesn't decrypt any BuyerInput ciphertext.
    map<string, bytes> encrypted_input_per_buyer = 3;

    // Includes configuration data required in Remarketing ad auction.
    // Some of the data in AuctionConfig is passed to BuyerFrontEnd.
    AuctionConfig auction_config = 4;

    // Type of end user's device / client, that would help in validating the
    // integrity of an attested client.
    // Note: Not all types of clients will be attested.
    ClientType client_type = 5;

    // Raw (unencrypted) version of the encrypted_input_per_buyer field above.
    // See encrypted_input_per_buyer for details.
    // TODO(b/239242947): Remove this field and reserve, after encryption is
    // incorporated.
    map<string, BuyerInput> raw_buyer_input = 6;

    // Field representing client attestation data will be added later.
  }

  // Encrypted SelectWinningAdRawRequest.
  bytes request_ciphertext = 1;

  // Version of the public key used for request encryption. The service
  // needs use private keys corresponding to same key_id to decrypt
  // 'request_ciphertext'.
  string key_id = 2;

  // Unencrypted form of the SelectWinningAdRawRequest to be used until
  // encryption is incorporated in the client/server communication.
  // TODO(b/239242947): Remove this field and reserve, after request
  // encryption / decryption is complete.
  SelectWinningAdRawRequest raw_request = 3;
}

message SelectWinningAdResponse {
  // Unencrypted response.
  message SelectWinningAdRawResponse {
    // The ad that will be rendered on the end user's device. This url is
    // validated on the client side to ensure that it actually belongs to
    // Custom Audience (a.k.a Interest Group).
    string ad_render_url = 1;

    // Score of the winning ad.
    double score = 2;

    // Custom Audience (a.k.a Interest Group) name.
    string custom_audience_name = 3;

    // Bid for the winning ad candidate, generated by a buyer participating in
    // the auction.
    double bid_price = 4;

    // The version of the binary running on the server and Guest OS of Secure
    // Virtual Machine. The client may validate that with the version
    // available in open source repo.
    string server_binary_version = 5;
  }

  // Encrypted SelectWinningAdRawResponse.
  bytes response_ciphertext = 1;

  // TODO(b/239076127): Remove this field and reserve, after request
  // encryption / decryption is incorporated.
  SelectWinningAdRawResponse raw_response = 2;
}

// An ad object.
// This is downloaded to device as part of Custom Audience (a.k.a Interest
// Group) fetch and then sent to servers.
message Ad {
  // Identifies an ad creative rendering url.
  string ad_render_url = 1;

  // Arbitrary metadata of the ad provided by Buyer.
  string ad_metadata = 2;
}

// A BuyerInput includes data that a buyer (DSP) requires to generate bids.
message BuyerInput {
  // CustomAudience (a.k.a InterestGroup) includes the endpoint from where
  // AdTech's proprietary code for bidding will be fetched, the set of ads
  // corresponding to this audience, user bidding signals and other optional
  // fields. Each Custom Audience has a name that is unique for a buyer.
  message CustomAudience {
    // Name or tag of Custom Audience (a.k.a Interest Group).
    string name = 1;

    // Ad creatives belonging to this CustomAudience (a.k.a InterestGroup).
    repeated Ad ads = 2;

    // Url for fetching buyer bidding code.
    string bidding_logic_url = 3;

    // Optional. The buyer may provide computationally-expensive
    // subroutines in WebAssembly (WASM) that can be fetched using this url.
    string bidding_wasm_helper_url = 4;

    // Keys to lookup from buyer Key/Value service.
    repeated string bidding_signals_keys = 5;

    // The endpoint for buyer Key/Value service. This points to that shard of
    // KV Service that has data corresponding to 'bidding_signals_keys'.
    string bidding_signals_url = 6;

    // Optional. This field may be populated for browser but not required for
    // Android at this point.
    //
    // This field contains the various ad components (or "products") that can
    // be used to construct Ads Composed of Multiple Pieces. Each entry is an
    // object that includes both a rendering URL and arbitrary metadata that
    // can be used at bidding time.
    repeated string ad_components = 7;

    // Optional. This field may be set for browser but not required for Android
    // at this point.
    //
    // The priority is used to select which Interest Groups (a.k.a Custom
    // Audiences) participate in an auction when the number of Interest Groups
    // are limited by the buyer_group_limits in BrowserBuyerInput. If not
    // specified, the default value of 0.0 is assigned.
    //
    // These values are only used to select Interest Groups to participate in
    // an auction such that if there is an Interest Group participating in the
    // auction with priority x, all interest groups corresponding to the same
    // buyer having a priority y where y > x should be considered for generating
    // bids. In case due to buyer_group_limits if all Interest Groups with same
    // priority can not participate, then Interest Groups will be uniformly
    // randomly chosen from the set of interest groups with that priority.
    float priority = 8;

    // User bidding signals for storing additional metadata that the Buyer can
    // use during bidding.
    google.protobuf.Struct user_bidding_signals = 9;
  }

  // The Custom Audiences (a.k.a Interest Groups) corresponding to the buyer.
  repeated CustomAudience custom_audiences = 1;

  // Buyer may provide additional contextual information that could help in
  // generating bids. Not fetched real-time.
  // Represents a JSON object.
  google.protobuf.Struct buyer_signals = 2;

  // Custom buyer inputs for advertising on Android.
  message CustomBuyerInputsForAndroid {
    // To be updated later if any custom fields are required to support Android.
  }

  // Custom buyer inputs for advertising on browsers.
  message CustomBuyerInputsForBrowser {
    // This timeout can be specified to restrict the runtime (in milliseconds)
    // of the buyer's generateBid() scripts for bidding. This can also be a
    // default value if timeout is unspecified for the buyer.
    int64 buyer_timeout_ms = 1;

    // This can be specified to limit the number of Interest Groups / Custom
    // Audiences from a particular buyer that participates in the auction. This
    // can also be a default value if the limit is unspecified for the buyer.
    int64 buyer_group_limit = 2;

    // The Id is specified by the buyer to support coordinated experiments with
    // the buyer's Key/Value services.
    int64 experiment_group_id = 3;
  }

  // Optional. Custom buyer input for app or web advertising.
  oneof CustomBuyerInputs {
    CustomBuyerInputsForAndroid custom_buyer_inputs_android = 3;

    CustomBuyerInputsForBrowser custom_buyer_inputs_browser = 4;
  }

  // Client (Android / Browser) stable identifier required for K-Anonymity
  // check.
  // Note: The BiddingFrontEnd would instrument K-Anonymity checks.
  string k_anon_member_id = 5;
}
